[package]
name = "asteroid-bridge"
version = "0.1.0"
authors = ["Asteroid Protocol"]
edition = "2021"
description = "Bridge CFT-20 tokens"
license = "GPL-3.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2 = "1.0.1"
cosmwasm-schema = "1.1.0"
cw-utils = "1.0.1"
cosmwasm-std = { version = "1.5.0", features = ["iterator", "ibc3"] }
cw-storage-plus = "0.15"
schemars = "0.8.12"
semver = "1.0.17"
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
thiserror = "1.0.40"
serde-json-wasm = "0.5.1"
base64 = { version = "0.13.0", default-features = false }
osmosis-std = "0.21"
neutron-sdk = "0.8"

[dev-dependencies]
cw-multi-test = "0.16.5"
anyhow = "1.0"
