[package]
name = "asteroid-neutron-bridge"
version = "1.0.0"
authors = ["Asteroid Protocol"]
edition = "2021"
description = "Bridge CFT-20 tokens to Neutron"
license = "GPL-3.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2 = "1.0.1"
cosmwasm-schema = "1.1.0"
cw-utils = "1.0.1"
cosmwasm-std = { version = "1.5.0", features = [
    "iterator",
    "ibc3",
    "stargate",
] }
cw-storage-plus = "0.15"
schemars = "0.8.12"
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
thiserror = "1.0.40"
base64 = "0.22.0"
osmosis-std = "0.21"
neutron-sdk = "0.8"
astroport = "3.11.1"
ed25519-dalek = "2"
serde-json-wasm = "1.0.1"

[dev-dependencies]
# cw-multi-test = "0.16.5"
anyhow = "1.0"
astroport-test = { git = "https://github.com/astroport-fi/hidden_astroport_core", branch = "feat/lp-tokenfactory", features = [
    "cosmwasm_1_1",
] }
# cw-multi-test = { git = "https://github.com/astroport-fi/cw-multi-test", branch = "feat/bank_with_send_hooks", features = [
#     "cosmwasm_1_1",
# ] }

cw-multi-test = { git = "https://github.com/astroport-fi/cw-multi-test", branch = "feat/bank_with_send_hooks_1_0", features = [
    "cosmwasm_1_1",
] }
